Fix bottom list item visibility

--- a/korean-handbook/src/components/App/App.scss
+++ b/korean-handbook/src/components/App/App.scss
@@ -251,6 +251,9 @@ body {
     list-style: none;
     font-weight: $medium-weight;
   }
+  &:not(&--header) .grid-item:last-of-type {
+    margin-bottom: 5em;
+  }
   &--header {
     margin-top: 0.5em;
     .grid-item {
@@ -424,6 +427,9 @@ button {
       }
       p {
         margin: 0;
+      }
+      &:last-of-type {
+        margin-bottom: 5em;
       }
     }
   }
